--- a/src/app/Tasks/tasks.component.html
+++ b/src/app/Tasks/tasks.component.html
@@ -9,9 +9,45 @@
             <td>{{task.id}}</td>
             <td>{{task.title}}</td>
             <td>
-                <button class="btn btn-info">Detalhes</button>
-                <button class="btn btn-danger">Excluir</button>
+                <button class="btn btn-info" data-toggle="modal" data-target="#taskDetailModal"
+                    (click)="onSelect(task)">
+                    <span class="oi oi-info"></span>
+                    Detalhes
+                </button>
+                <button class="btn btn-danger">
+                    <span class="oi oi-trash"></span>
+                    Excluir
+                </button>
             </td>
         </tr>
     </tbody>
 </table>
+
+
+<div *ngIf="selectedTask">
+    <p><strong>ID: </strong> {{ selectedTask.id }}</p>
+    <p><strong>Título: </strong> {{ selectedTask.title }}</p>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="taskDetailModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle"
+    aria-hidden="true" *ngIf="selectedTask">
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalScrollableTitle">Detalhes da Tarefa: {{ selectedTask.title }}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input [(ngModel)]="selectedTask.title" type="text" class="form-control">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
