--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -1,21 +1,14 @@
-<!-- Modal -->
-<div class="modal fade" id="taskDetailModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle"
-    aria-hidden="true" *ngIf="task">
-    <div class="modal-dialog modal-dialog-scrollable" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalScrollableTitle">Detalhes da Tarefa: {{ task.title }}</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <input [(ngModel)]="task.title" type="text" class="form-control">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+<h1>Detalhes da Tarefa: {{ task?.title }}</h1>
+<form *ngIf="task">
+    <div class="form-group row">
+        <label for="title" class="col-sm-2 col-form-label">Título</label>
+        <div class="col-sm-8">
+            <input type="text" class="form-control" id="title" placeholder="Título">
         </div>
     </div>
-</div>
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-success">Salvar</button>
+        </div>
+    </div>
+</form>
