--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -8,6 +8,7 @@
     </div>
     <div class="form-group row">
         <div class="col-sm-10">
+            <button class="btn btn-info" (click)="goBack()">Voltar</button>
             <button type="submit" class="btn btn-success">Salvar</button>
         </div>
     </div>
