--- a/src/app/Tasks/tasks.component.html
+++ b/src/app/Tasks/tasks.component.html
@@ -9,11 +9,10 @@
             <td>{{task.id}}</td>
             <td>{{task.title}}</td>
             <td>
-                <button class="btn btn-info" data-toggle="modal" data-target="#taskDetailModal"
-                    (click)="onSelect(task)">
+                <a [routerLink]="['/tasks', task.id]" class="btn btn-info" >
                     <span class="oi oi-info"></span>
                     Detalhes
-                </button>
+                </a>
                 <button class="btn btn-danger">
                     <span class="oi oi-trash"></span>
                     Excluir
