--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -1,15 +1,15 @@
 <h1 class="page-header">Detalhes da Tarefa: {{ task?.title }}</h1>
-<form *ngIf="task">
+<div *ngIf="task">
     <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label">Título</label>
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="title" placeholder="Título">
+            <input [(ngModel)]="task.title" type="text" class="form-control" >
         </div>
     </div>
     <div class="form-group row">
         <div class="col-sm-10">
             <button class="btn btn-info" (click)="goBack()">Voltar</button>
-            <button type="submit" class="btn btn-success">Salvar</button>
+            <button type="submit" class="btn btn-success" (click)="updateTask()">Salvar</button>
         </div>
     </div>
-</form>
+</div>
