--- a/src/app/Tasks/tasks.component.html
+++ b/src/app/Tasks/tasks.component.html
@@ -1,4 +1,18 @@
 <h1 class="page-header">Lista de Tarefas</h1>
+
+<div class="card card-body bg-light">
+    <div class="row">
+        <div class="col-md-10">
+            <input [(ngModel)]="newTask.title" type="text" class="form-control" placeholder="Digite aqui uma nova tarefa">
+        </div>
+        <div class="col-md-2">
+            <button class="btn btn-success" (click)="createTask()">
+                Adicionar Tarefa
+            </button>
+        </div>
+    </div>
+</div>
+
 <table class="table">
     <thead>
         <tr>
