--- a/src/app/Tasks/tasks.component.html
+++ b/src/app/Tasks/tasks.component.html
@@ -30,7 +30,7 @@
                     <span class="oi oi-info"></span>
                     Detalhes
                 </a>
-                <button class="btn btn-danger">
+                <button class="btn btn-danger" (click)="deleteTask(task)">
                     <span class="oi oi-trash"></span>
                     Excluir
                 </button>
