--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -1,15 +1,37 @@
 <h1 class="page-header">Detalhes da Tarefa: {{ task?.title }}</h1>
-<div *ngIf="task">
-    <div class="form-group row">
-        <label for="title" class="col-sm-2 col-form-label">Título</label>
-        <div class="col-sm-8">
-            <input [(ngModel)]="task.title" type="text" class="form-control" >
+
+<form #taskForm="ngForm" *ngIf="task">
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label for="title" class="control-label">Título</label>
+            <input [(ngModel)]="task.title" type="text" class="form-control" name="title" id="title">
+        </div>
+
+        <div class="form-group col-md-3">
+            <label for="deadline" class="control-label">Prazo de entrega</label>
+            <input [(ngModel)]="task.deadline" type="text" class="form-control" name="deadline" id="deadline">
+        </div>
+
+        <div class="form-group col-md-3">
+            <label for="done" class="control-label">Situação</label>
+            <select [(ngModel)]="task.done" type="text" class="form-control" name="done" id="done">
+                <option *ngFor="let option of taskDoneOptions" [value]="option.value">{{ option.text }}</option>
+            </select>
         </div>
     </div>
-    <div class="form-group row">
-        <div class="col-sm-10">
-            <button class="btn btn-info" (click)="goBack()">Voltar</button>
-            <button type="submit" class="btn btn-success" (click)="updateTask()">Salvar</button>
+
+    <div class="row">
+        <div class="form-group col-md-12">
+            <label for="description" class="control-label">Descrição detalhada</label>
+            <textarea [(ngModel)]="task.description" type="text" class="form-control" name="description"
+                id="description" rows="6"></textarea>
         </div>
     </div>
-</div>
+
+    <button class="btn btn-info" (click)="goBack()">Voltar</button>
+    <button type="submit" class="btn btn-success" (click)="updateTask()">Salvar</button>
+
+    <hr>
+
+    <pre>{{task | json}}</pre>
+</form>
