--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -4,12 +4,12 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label for="title" class="control-label">Título</label>
-            <input [(ngModel)]="task.title" type="text" class="form-control" name="title" id="title">
+            <input #title="ngModel" [(ngModel)]="task.title" type="text" [class.is-valid]="title.valid" [class.is-invalid]="title.invalid && title.touched" class="form-control" name="title" id="title" required>
         </div>
 
         <div class="form-group col-md-3">
             <label for="deadline" class="control-label">Prazo de entrega</label>
-            <input [(ngModel)]="task.deadline" type="text" class="form-control" name="deadline" id="deadline">
+            <input #deadline="ngModel" [(ngModel)]="task.deadline" type="text" [class.is-valid]="deadline.valid" [class.is-invalid]="deadline.invalid && deadline.touched" class="form-control" name="deadline" id="deadline" required>
         </div>
 
         <div class="form-group col-md-3">
@@ -29,9 +29,10 @@
     </div>
 
     <button class="btn btn-info" (click)="goBack()">Voltar</button>
-    <button type="submit" class="btn btn-success" (click)="updateTask()">Salvar</button>
+    <button [disabled]="taskForm.invalid" type="submit" class="btn btn-success" (click)="updateTask()">Salvar</button>
 
     <hr>
 
-    <pre>{{task | json}}</pre>
+    <pre><code>{{task | json}}</code></pre>
+    
 </form>
