--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -4,12 +4,16 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label for="title" class="control-label">Título</label>
-            <input #title="ngModel" [(ngModel)]="task.title" type="text" [class.is-valid]="title.valid" [class.is-invalid]="title.invalid && title.touched" class="form-control" name="title" id="title" required>
+            <input #title="ngModel" [(ngModel)]="task.title" type="text" [class.is-valid]="title.valid" [class.is-invalid]="showFieldError(title)" class="form-control" name="title" id="title" required minlength="3" maxlength="15">
+            <div *ngIf="showFieldError(title)"  class="text-danger">
+                <div *ngIf="title.errors.required">o título é obrigatório</div>
+                <div *ngIf="title.errors.minlength">O título deve ter no mínimo 3 caracteres.</div>
+            </div>
         </div>
 
         <div class="form-group col-md-3">
             <label for="deadline" class="control-label">Prazo de entrega</label>
-            <input #deadline="ngModel" [(ngModel)]="task.deadline" type="text" [class.is-valid]="deadline.valid" [class.is-invalid]="deadline.invalid && deadline.touched" class="form-control" name="deadline" id="deadline" required>
+            <input #deadline="ngModel" [(ngModel)]="task.deadline" type="text" [class.is-valid]="deadline.valid" [class.is-invalid]="showFieldError(deadline)" class="form-control" name="deadline" id="deadline" required>
         </div>
 
         <div class="form-group col-md-3">
@@ -33,6 +37,6 @@
 
     <hr>
 
-    <pre><code>{{task | json}}</code></pre>
+    <pre><code>{{title.errors | json}}</code></pre>
     
 </form>
