--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -1,6 +1,6 @@
 <h1 class="page-header">Detalhes da Tarefa: {{ task.title }}</h1>
 
-<form #taskForm="ngForm">
+<form #taskForm="ngForm" (ngSubmit)="updateTask()">
     <div class="row">
         <div class="form-group col-md-6">
             <label for="title" class="control-label">Título</label>
@@ -32,9 +32,8 @@
         </div>
     </div>
 
+    <button [disabled]="taskForm.invalid" type="submit" class="btn btn-success" >Salvar</button>
     <button class="btn btn-info" (click)="goBack()">Voltar</button>
-    <button [disabled]="taskForm.invalid" type="submit" class="btn btn-success" (click)="updateTask()">Salvar</button>
-
     <hr>
 
     <pre><code>{{title.errors | json}}</code></pre>
