--- a/src/app/Tasks/tasks.component.html
+++ b/src/app/Tasks/tasks.component.html
@@ -1,16 +1,19 @@
 <h1 class="page-header">Lista de Tarefas</h1>
 
 <div class="card card-body bg-light">
-    <div class="row">
-        <div class="col-md-10">
-            <input [(ngModel)]="newTask.title" type="text" class="form-control" placeholder="Digite aqui uma nova tarefa">
+    <form (ngSubmit)="create()">
+        <div class="row">
+            <div class="col-md-10">
+                <input [(ngModel)]="newTask.title" type="text" class="form-control"
+                    placeholder="Digite aqui uma nova tarefa" name="title">
+            </div>
+            <div class="col-md-2">
+                <button class="btn btn-success" type="submit">
+                    Adicionar Tarefa
+                </button>
+            </div>
         </div>
-        <div class="col-md-2">
-            <button class="btn btn-success" (click)="create()">
-                Adicionar Tarefa
-            </button>
-        </div>
-    </div>
+    </form>
 </div>
 
 <table class="table">
