--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -1,5 +1,48 @@
 <h1 class="page-header">Detalhes da Tarefa: {{ task.title }}</h1>
 
+<form [formGroup]="reactiveTaskForm">
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label for="title" class="control-label">Título</label>
+            <input type="text" formControlName="title" id="title" class="form-control">
+        </div>
+        <div class="form-group col-md-3">
+            <label for="deadline" class="control-label">Prazo de Entrega</label>
+            <input type="text" formControlName="deadline" id="deadline" class="form-control">
+        </div>
+        <div class="form-group col-md-3">
+            <label for="done" class="control-label">Situação</label>
+            <select class="form-control" formControlName="done" id="done">
+                <option *ngFor="let option of taskDoneOptions" [value]="option.value">{{ option.text }}</option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-12">
+            <label for="description" class="control-label">Descrição</label>
+            <textarea formControlName="description" class="form-control" id="description" rows="4"></textarea>
+        </div>
+    </div>
+
+    <!-- Exemplo de um segundo formgrupo em um formulário. -->
+    <!-- <div class="row" formGroupName="user">
+        <div class="form-group col-md-6">
+            <label for="name" class="control-label">Nome</label>
+            <input type="text" formControlName="name" id="name" class="form-control">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="email" class="control-label">Email</label>
+            <input type="text" formControlName="email" id="email" class="form-control">
+        </div>
+    </div> -->
+</form>
+
+<pre>{{ reactiveTaskForm.value | json }}</pre>
+
+
+
+<!-- <h1 class="page-header">Detalhes da Tarefa: {{ task.title }}</h1>
+
 <form #taskForm="ngForm" (ngSubmit)="updateTask()">
     <div class="row">
         <div class="form-group col-md-6">
@@ -38,4 +81,4 @@
 
     <pre><code>{{title.errors | json}}</code></pre>
     
-</form>
+</form> -->
