--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -4,15 +4,15 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label for="title" class="control-label">Título</label>
-            <input type="text" formControlName="title" id="title" class="form-control">
+            <input type="text" formControlName="title" id="title" class="form-control" [class.is-valid]="reactiveTaskForm.get('title').valid" [class.is-invalid]="showFieldError(reactiveTaskForm.get('title'))">
         </div>
         <div class="form-group col-md-3">
             <label for="deadline" class="control-label">Prazo de Entrega</label>
-            <input type="text" formControlName="deadline" id="deadline" class="form-control">
+            <input type="text" formControlName="deadline" id="deadline" class="form-control" [class.is-valid]="reactiveTaskForm.get('deadline').valid" [class.is-invalid]="showFieldError(reactiveTaskForm.get('deadline'))">
         </div>
         <div class="form-group col-md-3">
             <label for="done" class="control-label">Situação</label>
-            <select class="form-control" formControlName="done" id="done">
+            <select class="form-control" formControlName="done" id="done" [class.is-valid]="reactiveTaskForm.get('done').valid" [class.is-invalid]="showFieldError(reactiveTaskForm.get('done'))">
                 <option *ngFor="let option of taskDoneOptions" [value]="option.value">{{ option.text }}</option>
             </select>
         </div>
