--- a/src/app/Tasks/task-detail/task-detail.component.html
+++ b/src/app/Tasks/task-detail/task-detail.component.html
@@ -1,28 +1,28 @@
 <h1 class="page-header">Detalhes da Tarefa: {{ task.title }}</h1>
 
-<form [formGroup]="reactiveTaskForm" (ngSubmit)="updateTask()">
+<form [formGroup]="form" (ngSubmit)="updateTask()">
     <div class="row">
         <div class="form-group col-md-6">
             <label for="title" class="control-label">Título</label>
-            <input type="text" formControlName="title" id="title" class="form-control" [ngClass]="fieldClassErrorOrSuccess('title')">
+            <input type="text" formControlName="title" id="title" class="form-control" [ngClass]="formUtils.fieldClassErrorOrSuccess('title')">
 
-            <div *ngIf="showFieldError('title')" class="text-danger">
-                <div *ngIf="getField('title').errors.required">O título é obrigatório</div>
-                <div *ngIf="getField('title').errors.minlength">O título deve ter no mínimo 2 caracteres.</div>
-                <div *ngIf="getField('title').errors.maxlength">O título deve ter no máximo 255 caracteres.</div>
+            <div *ngIf="formUtils.showFieldError('title')" class="text-danger">
+                <div *ngIf="form.get('title').errors.required">O título é obrigatório</div>
+                <div *ngIf="form.get('title').errors.minlength">O título deve ter no mínimo 2 caracteres.</div>
+                <div *ngIf="form.get('title').errors.maxlength">O título deve ter no máximo 255 caracteres.</div>
             </div>
         </div>
         <div class="form-group col-md-3">
             <label for="deadline" class="control-label">Prazo de Entrega</label>
-            <input type="text" formControlName="deadline" id="deadline" class="form-control" [ngClass]="fieldClassErrorOrSuccess('deadline')">
-            <div *ngIf="showFieldError('deadline')" class="text-danger">O prazo é obrigatório</div>
+            <input type="text" formControlName="deadline" id="deadline" class="form-control" [ngClass]="formUtils.fieldClassErrorOrSuccess('deadline')">
+            <div *ngIf="formUtils.showFieldError('deadline')" class="text-danger">O prazo é obrigatório</div>
         </div>
         <div class="form-group col-md-3">
             <label for="done" class="control-label">Situação</label>
-            <select class="form-control" formControlName="done" id="done" [ngClass]="fieldClassErrorOrSuccess('done')">
+            <select class="form-control" formControlName="done" id="done" [ngClass]="formUtils.fieldClassErrorOrSuccess('done')">
                 <option *ngFor="let option of taskDoneOptions" [value]="option.value">{{ option.text }}</option>
             </select>
-            <div *ngIf="showFieldError('done')" class="text-danger">A situação é obrigatória</div>
+            <div *ngIf="formUtils.showFieldError('done')" class="text-danger">A situação é obrigatória</div>
         </div>
     </div>
     <div class="row">
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <button [disabled]="reactiveTaskForm.invalid" type="submit" class="btn btn-success" >Atualizar</button>
+    <button [disabled]="form.invalid" type="submit" class="btn btn-success" >Atualizar</button>
     <button class="btn btn-info" (click)="goBack()" type="button">Voltar</button>
 
     <!-- Exemplo de um segundo formgrupo em um formulário. -->
@@ -48,7 +48,7 @@
     </div> -->
 </form>
 
-<pre>{{ reactiveTaskForm.value | json }}</pre>
+<pre>{{ form.value | json }}</pre>
 
 
 
