--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -58,7 +58,7 @@
 
             <div class="form-group row">
                 <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" class="btn btn-primary">Criar Conta</button>
+                    <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Criar Conta</button>
                 </div>
             </div>
     </form>
