--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -1,6 +1,16 @@
 <h1 class="page-header">Faça seu cadastro</h1>
 
 <div class="jumbotron">
+
+    <div *ngIf="formErrors" class="alert alert-danger">
+        <strong>
+            Ocorreu um erro ao tentar criar sua conta no sistema.
+        </strong>
+        <ul>
+            <li *ngFor="let error of formErrors">{{ error }}</li>
+        </ul>
+    </div>
+
     <form [formGroup]="form" (ngSubmit)="signUpUser()">
         <div class="form-group row">
             <label for="name" class="col-sm-4 col-form-label">Nome</label>
@@ -58,7 +68,7 @@
 
             <div class="form-group row">
                 <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Criar Conta</button>
+                    <button type="submit" [disabled]="form.invalid || submitted" class="btn btn-primary">Criar Conta</button>
                 </div>
             </div>
     </form>
