--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -71,6 +71,13 @@
                     <button type="submit" [disabled]="form.invalid || submitted" class="btn btn-primary">Criar Conta</button>
                 </div>
             </div>
+
+            <div class="form-group row">
+                <div class="col-sm-offset-4 col-sm-8">
+                    Se você já possui uma conta,
+                    <a routerLink="/signin">clique aqui para entrar</a>
+                </div>
+            </div>
     </form>
 
 </div>
